fixed cardBlog image overlapping pn card

--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -200,4 +200,8 @@
 .tracking-lg{
   letter-spacing: 0.525rem;
 }
-   
+   .blogCard{
+     background-color: #22c680;
+     width: 480px;
+     height: 280px;
+   }
